--- a/02-Udemy/-04-Reactjs-Maximilian/Projects/19-ingredients-app/src/index.css
+++ b/02-Udemy/-04-Reactjs-Maximilian/Projects/19-ingredients-app/src/index.css
@@ -1,31 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
-html {
-  font-family: 'Noto Sans JP', sans-serif;
-}
-
+html,
 body {
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
-  background-color: #3f3f3f;
 }
 
 button {
   font: inherit;
+  background: #ff2058;
+  padding: 0.5rem 2rem;
+  color: white;
+  border: 1px solid #ff2058;
+  margin: 0.5rem 0;
+  border-radius: 5px;
   cursor: pointer;
-  padding: 0.5rem 1.5rem;
-  border-radius: 6px;
-  background-color: transparent;
-  color: #1a8ed1;
-  border: 1px solid #1a8ed1;
 }
 
 button:hover,
 button:active {
-  background-color: #1ac5d1;
-  border-color: #1ac5d1;
-  color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.26);
+}
+
+button:focus {
+  outline: none;
 }
